2022-10-05  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha10 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha10: Jinx Drives Solo';git push
	git tag -a 5.1.1-alpha10 -m '';git push --tags

	* Restrict available synonyms for MALI to mali, pending renaming of Land Ice model

2022-09-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha09 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha09: Taylor Hawkins Tribute';git push
	git tag -a 5.1.1-alpha09 -m 'all: FL_LST_IN_APPEND; ncremap: correct_areas, mono3';git push --tags

	* Exit gracefully instead of attempting to read empty positional arguments

	* Document -H support

	* All operators support FL_LST_IN_APPEND by default and -H to turn it off

2022-09-28  Charlie Zender  <zender@uci.edu>

	* ncremap remove --correct_areas since TR 2.1.12 made this default and eliminated option

	* ncremap replace --mono3 by --method mono3 since TR 2.1.14, 2.1.15 changed option name

2022-09-27  Charlie Zender  <zender@uci.edu>

	* ncks: append input files from stdin to output file

2022-09-26  Charlie Zender  <zender@uci.edu>

	* Adopt nco_fl_lst_stdin() for all operators except ncap2

	* Simplify nco_fl_lst_stdin() prototype

2022-09-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha08: Sham Referendum';git push
	git tag -a 5.1.1-alpha08 -m 'all: NSB->NESB; ncks bgr->btg, bgb->bgr, stdin, chk_map bln xcp; ncremap nco_idw fix';git push --tags

	* Functionalize nco_fl_lst_stdin()

	* ncremap replace ConvertSCRIPToExodus (no longer exists) by ConvertMeshoExodus

	* ncks chk_map add INFO not scary WARNING when weights are intentionally non-conservative

	* map checker examins global attributes map_method, no_conserve, noconserve to determine whether weights are intentionally non-conservative

2022-09-23  Charlie Zender  <zender@uci.edu>
